# write-tight

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  example.md  main.py  patterns.md  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py
src/writetight/: input_validation.py  main.py  nlp.py  pattern_questions.py  patterns.py
static/css/: styles.css
templates/: index.html
tests/: conftest.py  test_default_patterns.py  test_input_validation.py  test_non_default_patterns.py  test_patterns.py  test_style_patterns.py  test_text_validation.py
write-tight/src/: default_patterns.py  non_default_patterns.py  pattern.py
writetight/: main.py
writetight/src/: default_patterns.py  input_validation.py  non_default_patterns.py  pattern_questions.py  patterns.py
writetight/static/css/: styles.css
writetight/static/js/: script.js  script_output.js
writetight/templates/: base.html  index.html  input.html  output.html
