[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "write-tight"
version = "0.4.5"
authors = [
    {name = "Ernst Bolle", email = "ernst-bolle@bolle-data-consultancy.nl"},
]
description = "Write tight helps you to say exactly what you want with precision and power."
readme = "README.md"
dependencies = [
    "spacy>=3.0.0, <=4.0.0"  
]
requires-python = ">= 3.9"

[project.urls]
Homepage = "https://github.com/EBolle/write-tight"

[project.scripts]
wt = "writetight.main:main"

[tool.setuptools.packages.find]
include = ["writetight"]
exclude = ["docs", "tests", "notebooks"]