[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "write-tight"
version = "0.4.1"
authors = [
    {name = "Ernst Bolle", email = "ernst-bolle@bolle-data-consultancy.nl"},
]
description = "Write tight helps you to say exactly what you want with precision and power."
readme = "README.md"
dependencies = [
    "spacy==3.7.2"  
]
requires-python = ">= 3.11"

[project.urls]
Homepage = "https://github.com/EBolle/write-tight"

[project.scripts]
writetight = "writetight.main:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["writetight"]
exclude = ["docs", "notebooks", "tests"]