[metadata]
author = Ernst Bolle
name = writetight
description = Better writing with rule based patterns.
version = 0.1.0
long_description = file: README.md
license = MIT
classifiers =
    Programming Language :: Python :: 3.9

[options]
include_package_data = true
python_requires = >=3.9
install_requires =
    en-core-web-sm @ https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.4.0/en_core_web_sm-3.4.0-py3-none-any.whl
    flask>=2.1.3
    spacy>=3.4.1
packages = find:
